--- a/JavaStudy/Check4-5/src/main/webapp/index.html
+++ b/JavaStudy/Check4-5/src/main/webapp/index.html
@@ -6,19 +6,19 @@
  <link rel="stylesheet" type="text/css" href="./css/index.css">
  </head>
  <body>
-  <form action="/Check4-5/search" method="post">
+  <form action="/Check4-5/search" method="get">
   <div class="wrapper">
   <div class="header">社員情報システム</div>
   <ul>
   <!-- ID入力欄 -->
   <li class="id">
   <label for="id">ID</label>
-  <input type="text" name="id" value="" size="20">
+  <input type="text" name="id" value="id" size="20">
   </li>
   <!-- パスワードを入力する欄を作成してください -->
   <li class="pass">
    <label for="pass">PASS</label>
-   <input type="password" name="pass" value="" size="20">
+   <input type="password" name="pass" value="password" size="20">
 
   <!-- 検索ボタン -->
   <li><input id="button" type="submit" name="button" value="検索">
